--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
             <h2>About <span>Me</span></h2>
             <h4>AI/ML Engineer</h4>
             <p>
-                I am an AIML (Artificial Intelligence and Machine Learning) engineer in my final year at
-                Jhulelal Institute of Technology, Nagpur. My passion is building intelligent systems,
+                I have completed my engineering in AIML (Artificial Intelligence and Machine Learning) 
+                from Jhulelal Institute of Technology, Nagpur. My passion is building intelligent systems, 
                 full-stack applications, and solving real-world problems using AI and software development.
             </p>
 
